# dicolmumag

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  appimg.sh  clay.h  colors.c  colors.h  layout.c  linux.sh  main.c  nob.h  strings.h  windows.sh
raylib/: clay_renderer_raylib.c
resources/: collage1.avif  dicolmumag.desktop  functions.sh
src/: colors.c  layout.c  main.c  strings.c  strings.h  ui.c
